<?xml version="1.0"?>
<package format="2">
  <name>distance_map</name>
  <version>0.0.0</version>
  <description>
    The distance_map metapackage
  </description>

  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>distance_map_core</depend>
  <depend>distance_map_msgs</depend>
  <depend>distance_map_node</depend>

  <depend>distance_map_opencv</depend>

  <export>
    <metapackage/>
  </export>
</package>
