<?xml version="1.0"?>
<package format="2">
  <name>distance_map</name>
  <version>0.0.0</version>
  <description>
    The distance_map metapackage
  </description>

  <author email="deray.jeremie@gmail.com">Jeremie Deray</author>
  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- core -->
  <exec_depend>distance_map_core</exec_depend>
  <exec_depend>distance_map_msgs</exec_depend>
  <exec_depend>distance_map_node</exec_depend>

  <!-- rviz -->
  <exec_depend>distance_map_rviz</exec_depend>

  <!-- tools -->
  <exec_depend>distance_map_tools</exec_depend>

  <!-- plugins -->
  <exec_depend>distance_map_opencv</exec_depend>
  <exec_depend>distance_map_deadreck</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
