<?xml version="1.0"?>
<package format="2">
  <name>distance_map_core</name>
  <version>0.0.0</version>
  <description>
    The distance_map_core package.
  </description>

  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>distance_map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>

  <export>
    <!-- -->
  </export>
</package>
