<?xml version="1.0"?>
<package format="2">
  <name>distance_map_deadreck</name>
  <version>0.0.0</version>
  <description>
    Node package of the map_distance project.
    It contains the ROS node that instantiate the
    distance map plugin.
  </description>

  <author email="deray.jeremie@gmail.com">Jeremie Deray</author>
  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>

  <!-- This package license -->
  <license>Apache-2.0</license>

  <!-- Dead Reckonning license -->
  <license>MIT</license>
  <url type="website">https://github.com/arkanis/single-header-file-c-libs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>distance_map_core</depend>

  <export>
    <distance_map_core plugin="${prefix}/distance_map_plugin.xml" />
  </export>
</package>
