<?xml version="1.0"?>
<package format="2">
  <name>distance_map_msgs</name>
  <version>0.1.0</version>
  <description>Definition of the distance map message type.</description>

  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>
  <author email="deray.jeremie@gmail.com">Jeremie Deray</author>

  <license>Apache-2.0</license>

  <url type="website">http://github.com/artivis/distance_map</url>
  <url type="bugtracker">http://github.com/artivis/distance_map/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
