<?xml version="1.0"?>
<package format="2">
  <name>distance_map_rviz</name>
  <version>0.0.0</version>
  <description>
    Rviz plugin for the visualization of ditance maps.
  </description>

  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>

  <!-- this package license -->
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>distance_map_msgs</depend>
  <depend>rviz</depend>

<!--  <test_depend>roslib</test_depend>-->
<!--  <test_depend>rostest</test_depend>-->

  <export>
    <rviz plugin="${prefix}/distance_map_plugin.xml" />
  </export>
</package>
