<?xml version="1.0"?>
<package format="2">
  <name>distance_map_rviz</name>
  <version>0.0.0</version>
  <description>
    Rviz plugin for the visualization of ditance maps.
  </description>

  <author email="deray.jeremie@gmail.com">Jeremie Deray</author>
  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>distance_map_msgs</depend>
  <depend>rviz</depend>

  <export>
    <rviz plugin="${prefix}/distance_map_plugin.xml" />
  </export>
</package>
